sdks/python/goud_engine/bindings.py

"""
GoudEngine Python FFI Bindings

This module provides Python bindings to the GoudEngine Rust core using ctypes.
All FFI types and functions are defined here, wrapping the native library.

Design Philosophy:
    All logic lives in Rust. This SDK is a thin wrapper that marshals data
    and calls FFI functions. This ensures consistent behavior across all
    language bindings (C#, Python, Rust native).
"""

import ctypes
import platform
import os
from ctypes import (
    Structure, c_float, c_uint64, c_uint32, c_int32,
    c_bool, c_uint8, POINTER, byref, c_void_p, c_char_p
)
from typing import Optional, List, Callable, Any
from pathlib import Path


# =============================================================================
# Library Loading
# =============================================================================

def _get_library_path() -> str:
    """Determine the correct native library path based on platform."""
    system = platform.system()
    
    # Try to find library in common locations
    search_paths = [
        # Development paths (relative to this file)
        Path(__file__).parent.parent.parent.parent / "target" / "release",
        Path(__file__).parent.parent.parent.parent / "target" / "debug",
        # Installed paths
        Path("/usr/local/lib"),
        Path("/usr/lib"),
        # Current directory
        Path("."),
    ]
    
    if system == "Darwin":
        lib_name = "libgoud_engine.dylib"
    elif system == "Linux":
        lib_name = "libgoud_engine.so"
    elif system == "Windows":
        lib_name = "goud_engine.dll"
    else:
        raise OSError(f"Unsupported platform: {system}")
    
    for path in search_paths:
        lib_path = path / lib_name
        if lib_path.exists():
            return str(lib_path)
    
    # Fall back to letting the system find it
    return lib_name


def _load_library():
    """Load the native library."""
    lib_path = _get_library_path()
    try:
        return ctypes.CDLL(lib_path)
    except OSError as e:
        raise OSError(
            f"Failed to load GoudEngine native library from '{lib_path}'.\n"
            f"Make sure the library is built: cd goud_engine && cargo build --release\n"
            f"Error: {e}"
        ) from e


# Load the library at module import time
_lib = _load_library()


# =============================================================================
# FFI Type Definitions
# =============================================================================

class GoudContextId(Structure):
    """FFI-safe context identifier (packed index + generation)."""
    _fields_ = [("_bits", c_uint64)]
    
    @classmethod
    def invalid(cls) -> "GoudContextId":
        """Returns the invalid context ID sentinel."""
        return cls(_bits=0xFFFFFFFFFFFFFFFF)
    
    def is_invalid(self) -> bool:
        """Returns True if this is the invalid sentinel."""
        return self._bits == 0xFFFFFFFFFFFFFFFF
    
    def __repr__(self) -> str:
        if self.is_invalid():
            return "GoudContextId(INVALID)"
        index = self._bits & 0xFFFFFFFF
        generation = (self._bits >> 32) & 0xFFFFFFFF
        return f"GoudContextId(index={index}, gen={generation})"


class GoudEntityId(Structure):
    """FFI-safe entity identifier."""
    _fields_ = [("bits", c_uint64)]
    
    INVALID = 0xFFFFFFFFFFFFFFFF
    
    @classmethod
    def invalid(cls) -> "GoudEntityId":
        """Returns the invalid entity ID sentinel."""
        return cls(bits=cls.INVALID)
    
    def is_invalid(self) -> bool:
        """Returns True if this is the invalid sentinel."""
        return self.bits == self.INVALID
    
    def __repr__(self) -> str:
        if self.is_invalid():
            return "GoudEntityId(INVALID)"
        return f"GoudEntityId({self.bits})"


class GoudResult(Structure):
    """FFI-safe result type for operations that can fail."""
    _fields_ = [
        ("code", c_int32),
        ("success", c_bool),
    ]
    
    def is_ok(self) -> bool:
        """Returns True if this result indicates success."""
        return self.success
    
    def is_err(self) -> bool:
        """Returns True if this result indicates failure."""
        return not self.success
    
    def __repr__(self) -> str:
        if self.success:
            return "GoudResult(Success)"
        return f"GoudResult(Error: code={self.code})"
    
    def raise_on_error(self, message: str = "Operation failed"):
        """Raises GoudEngineError if this result is an error."""
        if self.is_err():
            raise GoudEngineError(f"{message}: error code {self.code}")


class Vec2(Structure):
    """FFI-safe 2D vector."""
    _fields_ = [
        ("x", c_float),
        ("y", c_float),
    ]
    
    def __init__(self, x: float = 0.0, y: float = 0.0):
        super().__init__()
        self.x = x
        self.y = y
    
    def __repr__(self) -> str:
        return f"Vec2({self.x}, {self.y})"
    
    def __add__(self, other: "Vec2") -> "Vec2":
        return Vec2(self.x + other.x, self.y + other.y)
    
    def __sub__(self, other: "Vec2") -> "Vec2":
        return Vec2(self.x - other.x, self.y - other.y)
    
    def __mul__(self, scalar: float) -> "Vec2":
        return Vec2(self.x * scalar, self.y * scalar)
    
    def __truediv__(self, scalar: float) -> "Vec2":
        return Vec2(self.x / scalar, self.y / scalar)
    
    def length(self) -> float:
        """Returns the length of this vector."""
        return (self.x ** 2 + self.y ** 2) ** 0.5
    
    def normalize(self) -> "Vec2":
        """Returns a normalized copy of this vector."""
        length = self.length()
        if length == 0:
            return Vec2(0, 0)
        return self / length
    
    @classmethod
    def zero(cls) -> "Vec2":
        return cls(0.0, 0.0)
    
    @classmethod
    def one(cls) -> "Vec2":
        return cls(1.0, 1.0)


class Color(Structure):
    """FFI-safe RGBA color."""
    _fields_ = [
        ("r", c_float),
        ("g", c_float),
        ("b", c_float),
        ("a", c_float),
    ]
    
    def __new__(cls, r: float = 1.0, g: float = 1.0, b: float = 1.0, a: float = 1.0):
        # Use __new__ to properly initialize ctypes Structure with our values
        instance = super().__new__(cls)
        instance.r = r
        instance.g = g
        instance.b = b
        instance.a = a
        return instance
    
    def __init__(self, r: float = 1.0, g: float = 1.0, b: float = 1.0, a: float = 1.0):
        # Fields are set in __new__, this is just for IDE completeness
        pass
    
    def __repr__(self) -> str:
        return f"Color({self.r}, {self.g}, {self.b}, {self.a})"
    
    @classmethod
    def white(cls) -> "Color":
        return cls(1.0, 1.0, 1.0, 1.0)
    
    @classmethod
    def black(cls) -> "Color":
        return cls(0.0, 0.0, 0.0, 1.0)
    
    @classmethod
    def red(cls) -> "Color":
        return cls(1.0, 0.0, 0.0, 1.0)
    
    @classmethod
    def green(cls) -> "Color":
        return cls(0.0, 1.0, 0.0, 1.0)
    
    @classmethod
    def blue(cls) -> "Color":
        return cls(0.0, 0.0, 1.0, 1.0)
    
    @classmethod
    def yellow(cls) -> "Color":
        return cls(1.0, 1.0, 0.0, 1.0)
    
    @classmethod
    def transparent(cls) -> "Color":
        return cls(0.0, 0.0, 0.0, 0.0)
    
    @classmethod
    def from_hex(cls, hex_value: int) -> "Color":
        """Creates a color from a hex value (0xRRGGBB or 0xRRGGBBAA)."""
        if hex_value > 0xFFFFFF:
            # Has alpha
            r = ((hex_value >> 24) & 0xFF) / 255.0
            g = ((hex_value >> 16) & 0xFF) / 255.0
            b = ((hex_value >> 8) & 0xFF) / 255.0
            a = (hex_value & 0xFF) / 255.0
        else:
            # No alpha
            r = ((hex_value >> 16) & 0xFF) / 255.0
            g = ((hex_value >> 8) & 0xFF) / 255.0
            b = (hex_value & 0xFF) / 255.0
            a = 1.0
        return cls(r, g, b, a)


class Rect(Structure):
    """FFI-safe rectangle."""
    _fields_ = [
        ("x", c_float),
        ("y", c_float),
        ("width", c_float),
        ("height", c_float),
    ]
    
    def __init__(self, x: float = 0.0, y: float = 0.0, 
                 width: float = 0.0, height: float = 0.0):
        super().__init__()
        self.x = x
        self.y = y
        self.width = width
        self.height = height
    
    def __repr__(self) -> str:
        return f"Rect({self.x}, {self.y}, {self.width}, {self.height})"
    
    def contains(self, point: Vec2) -> bool:
        """Returns True if the point is inside this rectangle."""
        return (self.x <= point.x < self.x + self.width and
                self.y <= point.y < self.y + self.height)


class Mat3x3(Structure):
    """FFI-safe 3x3 matrix (column-major order)."""
    _fields_ = [("m", c_float * 9)]
    
    def __repr__(self) -> str:
        return f"Mat3x3({list(self.m)})"


# =============================================================================
# Transform2D Component
# =============================================================================

class FfiTransform2D(Structure):
    """FFI-safe Transform2D representation."""
    _fields_ = [
        ("position_x", c_float),
        ("position_y", c_float),
        ("rotation", c_float),
        ("scale_x", c_float),
        ("scale_y", c_float),
    ]


class Transform2D:
    """
    2D transformation component with position, rotation, and scale.
    
    All operations delegate to the Rust FFI layer to ensure consistent
    behavior across all language bindings.
    
    Example:
        transform = Transform2D.from_position(100, 50)
        transform.translate(10, 20)
        transform.rotate(math.pi / 4)
        forward = transform.forward()
    """
    
    def __init__(self, position: Vec2 = None, rotation: float = 0.0, scale: Vec2 = None):
        """Creates a new Transform2D with the given values."""
        self._ffi = FfiTransform2D()
        if position is None:
            position = Vec2(0, 0)
        if scale is None:
            scale = Vec2(1, 1)
        self._ffi.position_x = position.x
        self._ffi.position_y = position.y
        self._ffi.rotation = rotation
        self._ffi.scale_x = scale.x
        self._ffi.scale_y = scale.y
    
    @classmethod
    def _from_ffi(cls, ffi: FfiTransform2D) -> "Transform2D":
        """Internal: Create from FFI struct."""
        t = cls.__new__(cls)
        t._ffi = ffi
        return t
    
    @property
    def position(self) -> Vec2:
        """Gets the position."""
        return Vec2(self._ffi.position_x, self._ffi.position_y)
    
    @position.setter
    def position(self, value: Vec2):
        """Sets the position."""
        self._ffi.position_x = value.x
        self._ffi.position_y = value.y
    
    @property
    def rotation(self) -> float:
        """Gets the rotation in radians."""
        return self._ffi.rotation
    
    @rotation.setter
    def rotation(self, value: float):
        """Sets the rotation in radians."""
        _lib.goud_transform2d_set_rotation(byref(self._ffi), c_float(value))
    
    @property
    def scale(self) -> Vec2:
        """Gets the scale."""
        return Vec2(self._ffi.scale_x, self._ffi.scale_y)
    
    @scale.setter
    def scale(self, value: Vec2):
        """Sets the scale."""
        self._ffi.scale_x = value.x
        self._ffi.scale_y = value.y
    
    # Factory methods (delegate to Rust FFI)
    
    @classmethod
    def from_position(cls, x: float, y: float) -> "Transform2D":
        """Creates a transform at the given position with default rotation and scale."""
        ffi = _lib.goud_transform2d_from_position(c_float(x), c_float(y))
        return cls._from_ffi(ffi)
    
    @classmethod
    def from_rotation(cls, rotation: float) -> "Transform2D":
        """Creates a transform with the given rotation (in radians)."""
        ffi = _lib.goud_transform2d_from_rotation(c_float(rotation))
        return cls._from_ffi(ffi)
